# RAG

./: README.md  pyproject.toml
data/text_files/: machine_learning.txt  python_intro.txt
notebook/: document.ipynb  pdf_loader.ipynb
