[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.0",
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.0.1",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.1",
    "sentence-transformers>=5.1.2",
]
